# ProHealth

./: docker-compose.yaml  index.html  nginx.conf  package-lock.json
backend/: .env  .gitignore  Dockerfile  alembic.ini  prohealth.db  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 07555b37e5fe_init.py  10a27f4c64f4_add_description_to_article.py  2343ab2e077d_add_src_to_article.py  521608e36969_sync_db.py  b70ecbea428c_add_author_to_article.py
backend/app/: main.py
backend/app/core/: config.py  redis.py  security.py
backend/app/db/: seed.py  session.py
backend/app/dependencies/: auth.py  db.py
backend/app/models/: article.py  user.py
backend/app/routes/: admin.py  articles.py  auth.py
backend/app/schemas/: article.py
backend/app/services/: article_service.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: api.js  articles.js  auth.js
frontend/src/pages/: ArticlePage.jsx  ArticlesPage.jsx  Home.jsx  LoginPage.jsx  ProfilePage.jsx  RegisterPage.jsx
frontend/src/services/: api.js
frontend/src/styles/: _fonts.scss  globals.css  globals.css.map  globals.scss
src/: App.jsx  main.jsx
src/components/: Article.jsx  Button.jsx  Field.jsx  Logo.jsx
src/layouts/: Footer.jsx  Header.jsx  Main.jsx
src/pages/: AddArticlePage.jsx  ArticlePage.jsx  Articles.jsx  ArticlesPage.jsx  Home.jsx
src/styles/: _functions.scss  _media.scss  _mixins.scss  _reset.scss  _variables.scss  globals.css  globals.css.map  globals.scss
(+63 files in other folders)
