[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Timur Shiplivcev",email = "timur430808@gmail.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "redis (>=7.3.0,<8.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "fastapi-cache2 (>=0.2.2,<0.3.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "bcrypt (==4.3.0)",
    "passlib (>=1.7.4,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
